# mlops-siata

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  main.py  preprocess.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_experiments.ipynb
src/api/: main.py
src/data/: load_data.py
src/models/: train.py  train_xgboost.py
tests/: test_pipeline.py
